--- a/source/styles/animations.css
+++ b/source/styles/animations.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../styles/Montserrat/Montserrat-VariableFont_wght.ttf');
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  font-style: italic;
+  src: url('../styles/Montserrat/Montserrat-Italic-VariableFont_wght.ttf');
+}
+
+html {
+  font-family: 'Montserrat';
+}
+
 @keyframes heart-beat {
   0% {
     transform: scale(1);
@@ -15,7 +30,7 @@
     transform: scale(1);
   }
   50% {
-    transform: scale(1.25);
+    transform: scale(1.15);
   }
   100% {
     transform: scale(1);
