--- a/docs/main.css
+++ b/docs/main.css
@@ -617,6 +617,21 @@
     transform: rotate(360deg);
   }
 }
+@font-face {
+  font-family: 'Montserrat';
+  src: url(/webopoly7e687123cd4528224ce5.ttf);
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  font-style: italic;
+  src: url(/webopoly7451547bd28d8dddbeea.ttf);
+}
+
+html {
+  font-family: 'Montserrat';
+}
+
 @keyframes heart-beat {
   0% {
     transform: scale(1);
@@ -634,7 +649,7 @@
     transform: scale(1);
   }
   50% {
-    transform: scale(1.25);
+    transform: scale(1.15);
   }
   100% {
     transform: scale(1);
