--- a/source/styles/animations.css
+++ b/source/styles/animations.css
@@ -1,18 +1,3 @@
-@font-face {
-  font-family: 'Montserrat';
-  src: url('../styles/Montserrat/Montserrat-VariableFont_wght.ttf');
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  font-style: italic;
-  src: url('../styles/Montserrat/Montserrat-Italic-VariableFont_wght.ttf');
-}
-
-html {
-  font-family: 'Montserrat';
-}
-
 @keyframes heart-beat {
   0% {
     transform: scale(1);
@@ -43,5 +28,15 @@ html {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes glow {
+  0% {
+  }
+  50% {
+    text-shadow: goldenrod 0px 0px 0px;
+  }
+  100% {
   }
 }
